Exercises-part-2/exercise-2.08/project/manifests/server-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: server-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: server
  template:
    metadata:
      labels:
        app: server
    spec:
      containers:
      - name: server
        image: sirpacoder/server:v2.08
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
