Exercises-part-2/exercise-2.08/project/manifests/client-serv.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: client
  ports:
  - name: client
    port: 6661
    protocol: TCP
    targetPort: 3000
    nodePort: 30081
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: client-svc
#   namespace: project
# spec:
#   type: ClusterIP
#   selector:
#     app: client
#   ports:
#   - name: client
#     port: 6661
#     protocol: TCP
#     targetPort: 3001
